# fluxrt

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  COMMANDS  Dockerfile.centos_compilers  Dockerfile.centos_compilers_deps  Dockerfile.centos_current_checkout  Dockerfile.centos_gcc  Dockerfile.centos_gcc_deps  Dockerfile.current_checkout  Dockerfile.ubuntu_compilers  Dockerfile.ubuntu_compilers_deps  Dockerfile.ubuntu_current_checkout  Dockerfile.ubuntu_current_checkout_amd64  Matrix.cpp  Matrix.h  README.md  barycentric.h  base.h  color.cpp  color.h  image.cpp  image.h  image.hpp  matrix.h  matrix.hpp  micromath.h  optics.cpp  optics.h  pyproject.toml  quaternion.h  quaternion.hpp  ray.h  raysphere.hpp  slab.cpp  slab.h  slab.hpp  sphere.h  triangle.cpp  (+10 more)
.circleci/: config.yml
.claude/: launch.json
app/: CMakeLists.txt  trace_all  trace_scene.cpp
benchmarks/: CMakeLists.txt  envmap_sampling.cpp  intersect.cpp  matrix.cpp  quaternion.cpp  random.cpp  rayslab.cpp  raysphere.cpp  raytriangle.cpp  slab.cpp  stdlib.cpp  transform.cpp  vector.cpp
bindings/python/: CMakeLists.txt  camera_bindings.h  envmap_bindings.h  fresnel_bindings.h  material_bindings.h  microfacet_bindings.h  optics_bindings.h  pyfluxrt.cpp  radiometry_bindings.h  ray_bindings.h  renderer_bindings.h  rng_bindings.h  scene_bindings.h  sensor_bindings.h  vec2_bindings.h  vec3_bindings.h
chaiscript/: CMakeLists.txt  chairun.cpp
cmake/: GenerateBuildInfo.cmake  build_info.h.in
dashboard/: dashboard.css  dashboard.js  index.html  job.html  server.py
doc/: Raspberry Pi.md  scene-format.md
docker/: COMMANDS  Dockerfile.ubuntu_compilers  Dockerfile.ubuntu_current_checkout
include/: CubeMapEnvironmentMap.h  DiskLight.h  EnvironmentMap.h  GradientEnvironmentMap.h  HeapManager.h  LatLonEnvironmentMap.h  Logger.h  Renderer.h  Sphere.h  TraceableKDTree.h  TriangleMesh.h  TriangleMeshOctree.h  ValueRGB.h  ambientocclusion.h  argparse.h  artifacts.h  base.h  brdf.h  camera.h  color.h  constants.h  coordinate.h  environmentmap.h  filesystem.h  fresnel.h  image.h  integrate.h  interpolation.h  jacobian.h  light.h  material.h  matrix.h  micromath.h  optics.h  radiometry.h  ray.h  renderer.h  rng.h  scene.h  sensor.h  (+12 more)
notebooks/: Environment Map Sampling.ipynb  Fresnel.ipynb  Microfacet.ipynb  Optics.ipynb  Random.ipynb  SimpleTest.ipynb  TraceScene.ipynb
python/: CMakeLists.txt  micromath.i
scenes/examples/projection/: cubemap.toml  latlon.toml  single.toml
scenes/ies_profiles/: downlight_narrow.ies  downlight_wide.ies  wall_washer.ies
scenes/quicklook/: bmw_cubemap_envmap.toml  bmw_diffuse_cubemap_envmap.toml  bmw_gradient_envmap.toml  bmw_mirror_cubemap_envmap.toml  cube_stack_cubemap_envmap.toml  cube_stack_gradient_envmap.toml  furnace-lambertian-sphere.toml  projection_cubemap.toml  projection_latlon.toml  projection_single.toml  sphere.toml
scenes/quicklook/furnace/: furnace_lambertian_sphere_latlon_envmap.toml  furnace_mirror_sphere.toml  furnace_phong_sphere.toml  furnace_refractive_sphere.toml
scenes/quicklook/lighting/: alpha_allows_light_disk_light.toml  alpha_allows_light_point_light.toml  alpha_allows_light_sampled_envmap.toml  alpha_cutout_allows_light.toml  alpha_cutout_allows_light_disk_light.toml  alpha_cutout_allows_light_point_light.toml  alpha_cutout_allows_light_sampled_envmap.toml  sphere_disk_light.toml  sphere_ies_narrow.toml  sphere_ies_wall_washer.toml  sphere_ies_wide.toml
scenes/toml/: bmw.toml  cars.toml  color_cube_stack_gradient_envmap.toml  cornell.toml  cube_stack_area_light.toml  cube_stack_gradient_envmap.toml  dabrovic-sponza.toml  dachshund.toml  fireplace_room.toml  furniture.toml  gallery-vase.toml  gallery.toml  girl-on-world-ribbon.toml  hairball.toml  include-test.toml  jars.toml  living_room.toml  living_room_coffee_table.toml  mater-dolorosa.toml  mesh.toml  mirror_dachshund.toml  mitsuba-sphere-envmap.toml  mitsuba-sphere-lambertian.toml  mitsuba-sphere.toml  mitsuba.toml  mori-knob.toml  mysimball.toml  pieta-arealight.toml  pieta-gradient-envmap.toml  pieta-pointlight.toml  pieta.toml  refract_cube_sanity_check.toml  refract_slabs_beers_varying_thickness.toml  refract_slabs_rotated.toml  refract_slabs_varying_thickness.toml  refractive_dachshund.toml  refractive_spheres_cubes_cubemap_envmap.toml  san-miguel-envmap.toml  san-miguel.toml  sphere-envmap.toml  (+13 more)
scenes/toml/cars/: bmw.toml  sports-car-breaks.toml  sports-car-envmap.toml  sports-car-headlight.toml  sports-car-rear-centered.toml  sports-car-rear.toml  sports-car-side-mirror.toml  (+1 more)
src/: AmbientOcclusion.cpp  AmbientOcclusion.h  CubeMapEnvironmentMap.cpp  CubeMapEnvironmentMap.h  DiskLight.h  DiskLight.hpp  EnvironmentMap.cpp  EnvironmentMap.h  GradientEnvironmentMap.cpp  GradientEnvironmentMap.h  IESLight.h  IESProfile.cpp  IESProfile.h  LatLonEnvironmentMap.cpp  LatLonEnvironmentMap.h  Logger.cpp  Logger.h  MaterialParameter.h  PointLight.h  Ray.cpp  RaylibWrapper.cpp  RaylibWrapper.h  RenderProjection.cpp  RenderProjection.h  Renderer.cpp  Renderer.h  Sphere.h  Sphere.hpp  TraceableKDTree.cpp  Triangle.cpp  Triangle.h  TriangleMesh-obj.cpp  TriangleMesh-ply.cpp  TriangleMesh-stl.cpp  TriangleMesh.cpp  TriangleMesh.h  TriangleMeshOctree.cpp  TriangleMeshOctree.h  ValueArray.cpp  ValueArray.h  (+72 more)
tests/: CMakeLists.txt  plot_xy.py  test_fresnel.cpp  test_image_write.cpp  test_imp_samp_envmap.cpp  test_interpolation.cpp  test_mesh_load.cpp  test_rng.cpp  test_scene_load.cpp  test_simple_intersection.cpp  test_toml_scene.cpp  trace_all  trace_scene.cpp  trace_scene_ao.cpp  trace_scene_depth.cpp  trace_scene_hits.cpp
unittests/: .gitignore  CMakeLists.txt  argparse.cpp  barycentric.cpp  boundingbox.cpp  brdf.cpp  color.cpp  coordinate.cpp  filesystem.cpp  fresnel.cpp  integrate.cpp  interpolation.cpp  jacobian.cpp  optics.cpp  plyloading.cpp  quaternion.cpp  radiometry.cpp  random.cpp  rayslab.cpp  raysphere.cpp  raytrianglemeshoctree.cpp  raytrianglemeshoctree_intersect.cpp  slab.cpp  transform.cpp  valuearray.cpp  vec3.cpp  vec4.cpp
viewer/: app.js  index.html  style.css
(+112 files in other folders)
