cmake_minimum_required(VERSION 2.6)

PROJECT (micromath_tests)

SET(CMAKE_CXX_FLAGS "-std=c++14 -O2")

find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
include_directories(..)

add_executable(vec3 vec3.cpp)
add_executable(vec4 vec4.cpp)
add_executable(quaternion quaternion.cpp)
add_executable(slab slab.cpp)
add_executable(random random.cpp)
add_executable(fresnel fresnel.cpp)
add_executable(barycentric barycentric.cpp)
add_executable(raysphere raysphere.cpp)
add_executable(raytrianglemeshoctree raytrianglemeshoctree.cpp)
add_executable(integrate integrate.cpp)
add_executable(coordinate coordinate.cpp)
add_executable(filesystem filesystem.cpp)
add_executable(jacobian jacobian.cpp)

set(LIBS ${GTEST_BOTH_LIBRARIES} micromath pthread)

target_link_libraries(vec3 ${LIBS})
target_link_libraries(vec4 ${LIBS})
target_link_libraries(quaternion ${LIBS})
target_link_libraries(slab ${LIBS})
target_link_libraries(random ${LIBS})
target_link_libraries(fresnel ${LIBS})
target_link_libraries(barycentric ${LIBS})
target_link_libraries(raysphere ${LIBS})
target_link_libraries(raytrianglemeshoctree ${LIBS})
target_link_libraries(integrate ${LIBS})
target_link_libraries(coordinate ${LIBS})
target_link_libraries(filesystem ${LIBS})
target_link_libraries(jacobian ${LIBS})

add_test(AllTestsInVec3 vec3)
add_test(AllTestsInVec4 vec4)
add_test(AllTestsInQuaternion quaternion)
add_test(AllTestsInSlab slab)
add_test(AllTestsInRandom random)
add_test(AllTestsInFresnel fresnel)
add_test(AllTestsInBarycentric barycentric)
add_test(AllTestsInRaySphere raysphere)
add_test(AllTestsInRayTriangleMeshOctree raytrianglemeshoctree)
add_test(AllTestsInIntegrate integrate)
add_test(AllTestsInCoordinate coordinate)
add_test(AllTestsInFileSystem filesystem)
add_test(AllTestsInJacobian jacobian)


